# cc-session-manager

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
scripts/: create-dmg.sh
src/: commands.rs  lib.rs  main.rs  main_cli.rs  models.rs  models_tests.rs  session_manager.rs  tauri_main.rs  ui.rs  utils.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  scroll-area.tsx
ui/src/services/: api.ts
ui/src/types/: index.ts
