[package]
name = "cc-session-manager"
version = "0.1.0"
edition = "2021"
authors = ["Petch <petch.wattanakorn@gmail.com>"]
description = "A CLI tool to manage Claude Code sessions"
license = "MIT"
repository = "https://github.com/petch-x/cc-session-manager"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
