[package]
name = "cc-session-manager"
version = "0.2.0"
edition = "2021"
authors = ["Petch <petch.wattanakorn@gmail.com>"]
description = "A CLI and GUI tool to manage Claude Code sessions"
license = "MIT"
repository = "https://github.com/petch-x/cc-session-manager"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"

# Tauri v2 dependencies (needed for commands)
tauri = { version = "2.0", optional = true }

# CLI dependencies (optional - only for CLI mode)
crossterm = { version = "0.27", optional = true }

[features]
default = ["cli"]
cli = ["dep:crossterm"]
gui = ["dep:tauri"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[workspace]
members = ["src-tauri"]
